fix prev next block on mobile & tablet (#512)

--- a/assets/src/scss/5-pages/_guide.scss
+++ b/assets/src/scss/5-pages/_guide.scss
@@ -6,9 +6,16 @@
   }
 
   .prev-next {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
     @include rem(margin-top, 40px);
     @include rem(margin-bottom, 40px);
     border-top: 2px dashed rgba($separator-color, 0.7);
+    @media (max-width: 767px) {
+      flex-direction: column;
+      align-items: center;
+    }
     a {
       text-decoration: none;
       vertical-align: middle;
